--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "postcss-loader": "^0.9.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
+    "uglify-loader": "^1.3.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-path-rewriter": "^1.1.3"
   },
