--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^6.3.6",
+    "babel-core": "^6.26.3",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.8.5",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.17.0",
-    "node-sass": "^3.7.0",
+    "node-sass": "^4.11.0",
     "postcss-loader": "^0.9.1",
-    "sass-loader": "^3.2.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.13.1",
     "uglify-loader": "^1.3.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
+    "webpack": "^3.12.0",
+    "webpack-cli": "^3.2.3",
     "webpack-path-rewriter": "^1.1.3"
   },
   "dependencies": {
